# docs/swagger.json
@@ -1514,12 +1514,22 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "name": "field_selector",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
                         "in": "query"
                     },
                     {
@@ -1529,12 +1539,22 @@
                     },
                     {
                         "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "name": "field_selector",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
                         "in": "query"
                     },
                     {
@@ -1544,12 +1564,72 @@
                     },
                     {
                         "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "name": "field_selector",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "namespace",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "field_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "namespace",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "field_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
                         "in": "query"
                     },
                     {
@@ -1582,6 +1662,74 @@
                 ],
                 "summary": "Pods",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "field_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "namespace",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
+                        "name": "pods",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "continue",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "field_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "label_selector",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "namespace",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "multi",
+                        "name": "pods",
+                        "in": "query"
+                    },
                     {
                         "type": "string",
                         "name": "continue",
